// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert[Base] should render correctly  1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="soui-descriptions soui-descriptions-wrapper"
  >
    <div
      class="soui-descriptions-header"
    >
      <div
        class="soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="soui-descriptions-body soui-descriptions-inline-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="soui-descriptions-table"
      >
        <colgroup>
          <col
            style="width: 33.33333333333333%;"
          />
          <col
            style="width: 33.33333333333333%;"
          />
          <col
            style="width: 33.33333333333333%;"
          />
        </colgroup>
        <tbody>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-cell"
            >
              <div
                class="soui-descriptions-item"
              >
                <div
                  class="soui-descriptions-label-inline"
                >
                  Name
                   :
                </div>
                <div
                  class="soui-descriptions-value-inline"
                >
                  Mai Mai
                </div>
              </div>
            </td>
            <td
              class="soui-descriptions-cell"
            >
              <div
                class="soui-descriptions-item"
              >
                <div
                  class="soui-descriptions-label-inline"
                >
                  Residence
                   :
                </div>
                <div
                  class="soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
            <td
              class="soui-descriptions-cell"
            >
              <div
                class="soui-descriptions-item"
              >
                <div
                  class="soui-descriptions-label-inline"
                >
                  Address
                   :
                </div>
                <div
                  class="soui-descriptions-value-inline"
                >
                  Yingdu Building
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-cell"
            >
              <div
                class="soui-descriptions-item"
              >
                <div
                  class="soui-descriptions-label-inline"
                >
                  Mobile
                   :
                </div>
                <div
                  class="soui-descriptions-value-inline"
                >
                  187-2323-9834
                </div>
              </div>
            </td>
            <td
              class="soui-descriptions-cell"
              colspan="2"
            >
              <div
                class="soui-descriptions-item"
              >
                <div
                  class="soui-descriptions-label-inline"
                >
                  Hometown
                   :
                </div>
                <div
                  class="soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about alignment 1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="soui-descriptions soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="soui-descriptions-header"
    >
      <div
        class="soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="soui-descriptions-body soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="soui-descriptions-table"
      >
        <tbody>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="soui-descriptions-label"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="soui-descriptions-label"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="soui-descriptions-label"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-value"
              colspan="3"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="soui-descriptions soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="soui-descriptions-header"
    >
      <div
        class="soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="soui-descriptions-body soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="soui-descriptions-table"
      >
        <tbody>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-value"
              colspan="3"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="soui-descriptions soui-descriptions-wrapper"
  >
    <div
      class="soui-descriptions-header"
    >
      <div
        class="soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="soui-descriptions-body soui-descriptions-vertical"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="soui-descriptions-table"
      >
        <tbody>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-label"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-label"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
          </tr>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-label"
              colspan="2"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
          </tr>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="soui-descriptions-value"
              colspan="2"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about arrangement 1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        horizontal
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        vertical
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        inlineHorizontal
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        inlineVertical
      </span>
    </div>
  </div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        auto
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        fixed
      </span>
    </div>
  </div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        no border
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        border
      </span>
    </div>
  </div>
  <div
    class="soui-descriptions soui-descriptions-wrapper"
  >
    <div
      class="soui-descriptions-header"
    >
      <div
        class="soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="soui-descriptions-body soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="soui-descriptions-table"
      >
        <tbody>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="soui-descriptions-label"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="soui-descriptions-label"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="soui-descriptions-label"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about border 1`] = `
<div>
  <div
    class="soui-descriptions soui-descriptions-wrapper"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-descriptions-header"
    >
      <div
        class="soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="soui-descriptions-body soui-descriptions-border soui-descriptions-table-layout-fixed soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="soui-descriptions-table"
      >
        <tbody>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
            >
              Name
            </td>
            <td
              class="soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="soui-descriptions-label"
            >
              Residence
            </td>
            <td
              class="soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="soui-descriptions-label"
            >
              Address
            </td>
            <td
              class="soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
            >
              Mobile
            </td>
            <td
              class="soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="soui-descriptions-label"
            >
              Hometown
            </td>
            <td
              class="soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="soui-descriptions soui-descriptions-wrapper"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-descriptions-header"
    >
      <div
        class="soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="soui-descriptions-body soui-descriptions-border soui-descriptions-table-layout-fixed soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="soui-descriptions-table"
      >
        <tbody>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Address
            </td>
            <td
              class="soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
            </td>
            <td
              class="soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="soui-descriptions soui-descriptions-wrapper"
  >
    <div
      class="soui-descriptions-header"
    >
      <div
        class="soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="soui-descriptions-body soui-descriptions-border soui-descriptions-table-layout-fixed soui-descriptions-vertical"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="soui-descriptions-table"
      >
        <tbody>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
            >
              Name
            </td>
            <td
              class="soui-descriptions-label"
            >
              Residence
            </td>
            <td
              class="soui-descriptions-label"
            >
              Address
            </td>
            <td
              class="soui-descriptions-label"
            >
              Mobile
            </td>
          </tr>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
            <td
              class="soui-descriptions-value"
            >
              187-2323-9834
            </td>
          </tr>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
              colspan="4"
            >
              Hometown
            </td>
          </tr>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-value"
              colspan="4"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about colums 1`] = `
<div
  class="soui-descriptions soui-descriptions-wrapper"
  style="margin-bottom: 12px;"
>
  <div
    class="soui-descriptions-header"
  >
    <div
      class="soui-descriptions-title"
    >
      User Info
    </div>
  </div>
  <div
    class="soui-descriptions-body soui-descriptions-horizontal"
  >
    <table
      cellpadding="0"
      cellspacing="0"
      class="soui-descriptions-table"
    >
      <tbody>
        <tr
          class="soui-descriptions-row"
        >
          <td
            class="soui-descriptions-label"
          >
            Name
          </td>
          <td
            class="soui-descriptions-value"
          >
            Mai Mai
          </td>
        </tr>
        <tr
          class="soui-descriptions-row"
        >
          <td
            class="soui-descriptions-label"
          >
            Mobile
          </td>
          <td
            class="soui-descriptions-value"
          >
            187-2323-9834
          </td>
        </tr>
        <tr
          class="soui-descriptions-row"
        >
          <td
            class="soui-descriptions-label"
          >
            Residence
          </td>
          <td
            class="soui-descriptions-value"
          >
            Beijing
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about responsive 1`] = `
<div>
  <div
    class="soui-descriptions soui-descriptions-wrapper"
  >
    <div
      class="soui-descriptions-header"
    >
      <div
        class="soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="soui-descriptions-body soui-descriptions-border soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="soui-descriptions-table"
      >
        <tbody>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Address
            </td>
            <td
              class="soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
            </td>
            <td
              class="soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about size 1`] = `
<div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="soui-descriptions soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="soui-descriptions-header"
    >
      <div
        class="soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="soui-descriptions-body soui-descriptions-inline-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="soui-descriptions-table"
      >
        <colgroup>
          <col
            style="width: 33.33333333333333%;"
          />
          <col
            style="width: 33.33333333333333%;"
          />
          <col
            style="width: 33.33333333333333%;"
          />
        </colgroup>
        <tbody>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-cell"
            >
              <div
                class="soui-descriptions-item"
              >
                <div
                  class="soui-descriptions-label-inline"
                >
                  Name
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="soui-descriptions-value-inline"
                >
                  Mai Mai
                </div>
              </div>
            </td>
            <td
              class="soui-descriptions-cell"
            >
              <div
                class="soui-descriptions-item"
              >
                <div
                  class="soui-descriptions-label-inline"
                >
                  Residence
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
            <td
              class="soui-descriptions-cell"
            >
              <div
                class="soui-descriptions-item"
              >
                <div
                  class="soui-descriptions-label-inline"
                >
                  Address
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="soui-descriptions-value-inline"
                >
                  Yingdu Building,Zhichun Road,Beijing
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-cell"
            >
              <div
                class="soui-descriptions-item"
              >
                <div
                  class="soui-descriptions-label-inline"
                >
                  Mobile
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="soui-descriptions-value-inline"
                >
                  187-2323-9834
                </div>
              </div>
            </td>
            <td
              class="soui-descriptions-cell"
              colspan="2"
            >
              <div
                class="soui-descriptions-item"
              >
                <div
                  class="soui-descriptions-label-inline"
                >
                  Hometown
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="soui-descriptions soui-descriptions-wrapper"
  >
    <div
      class="soui-descriptions-header"
    >
      <div
        class="soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="soui-descriptions-body soui-descriptions-border soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="soui-descriptions-table"
      >
        <tbody>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Address
            </td>
            <td
              class="soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="soui-descriptions-row"
          >
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
            </td>
            <td
              class="soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
